--- a/css/estilos.css
+++ b/css/estilos.css
@@ -226,7 +226,7 @@ flex-direction: row;
 
 
 #mainsabiduria{
-  background-image: url("../imagenes/fondodesabiduria.JPG");
+  background-image: url("../imagenes/fondodesabiduria.jpg");
   background-position: center;
   max-width: 100%;
   background-size: cover;
